--- a/index.html
+++ b/index.html
@@ -1,1 +1,202 @@
-<h1>Kevin Voller. Product Designer</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jane Doe - UX Designer Portfolio</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for a clean, modern look */
+        body {
+            font-family: 'Inter', sans-serif;
+            scroll-behavior: smooth;
+        }
+
+        /* Smooth scroll for navigation links */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* Style for the project card buttons on hover */
+        .project-card:hover .project-button {
+            transform: scale(1.05);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        /* Ensure the form elements have a consistent look */
+        input[type="text"],
+        input[type="email"],
+        textarea {
+            border: 1px solid #e2e8f0;
+            padding: 0.75rem 1rem;
+            border-radius: 0.5rem;
+            width: 100%;
+            transition: border-color 0.2s ease-in-out;
+        }
+
+        input[type="text"]:focus,
+        input[type="email"]:focus,
+        textarea:focus {
+            outline: none;
+            border-color: #3b82f6; /* Blue border on focus */
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
+        }
+    </style>
+</head>
+<body class="bg-gray-50 text-gray-800">
+
+    <!-- Header & Navigation -->
+    <header class="bg-white sticky top-0 z-50 shadow-md">
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold text-gray-900">Jane Doe</a>
+            <div class="hidden md:flex space-x-6">
+                <a href="#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
+                <a href="#projects" class="text-gray-600 hover:text-blue-600 transition-colors">Projects</a>
+                <a href="#contact" class="text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
+            </div>
+            <!-- Mobile Menu Button -->
+            <button id="mobile-menu-button" class="md:hidden text-gray-800 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                </svg>
+            </button>
+        </nav>
+        <!-- Mobile Menu Dropdown -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
+            <a href="#about" class="block py-2 px-6 text-gray-600 hover:bg-gray-100">About</a>
+            <a href="#projects" class="block py-2 px-6 text-gray-600 hover:bg-gray-100">Projects</a>
+            <a href="#contact" class="block py-2 px-6 text-gray-600 hover:bg-gray-100">Contact</a>
+        </div>
+    </header>
+
+    <main>
+        <!-- Hero Section -->
+        <section id="home" class="bg-blue-600 text-white flex items-center justify-center min-h-[60vh] py-16">
+            <div class="text-center px-6 md:px-12 max-w-4xl">
+                <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">
+                    Hi, I'm Jane, a UX Designer.
+                </h1>
+                <p class="text-lg md:text-xl font-light mb-8 opacity-90">
+                    I design intuitive and delightful experiences that solve real-world problems.
+                </p>
+                <a href="#projects" class="bg-white text-blue-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors duration-300">
+                    View My Work
+                </a>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section id="about" class="container mx-auto px-6 py-20 md:py-32">
+            <div class="flex flex-col md:flex-row items-center md:space-x-12">
+                <div class="w-full md:w-1/3 mb-8 md:mb-0">
+                    <!-- Placeholder image - replace with your own professional photo -->
+                    <img src="https://placehold.co/400x400/3b82f6/FFFFFF?text=Jane+Doe" alt="Jane Doe" class="rounded-full shadow-xl w-64 h-64 mx-auto md:mx-0 object-cover">
+                </div>
+                <div class="w-full md:w-2/3 text-center md:text-left">
+                    <h2 class="text-4xl md:text-5xl font-bold mb-4">About Me</h2>
+                    <p class="text-gray-600 text-lg leading-relaxed">
+                        I am a passionate UX designer with over 5 years of experience creating user-centered digital products. My expertise lies in user research, wireframing, prototyping, and usability testing. I believe that good design is not just about aesthetics, but about creating seamless and meaningful interactions. When I'm not designing, you can find me hiking or exploring new coffee shops.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects" class="bg-gray-100 px-6 py-20 md:py-32">
+            <div class="container mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-4xl md:text-5xl font-bold mb-4">My Projects</h2>
+                    <p class="text-lg text-gray-600">A selection of my recent work showcasing my design process and skills.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                    <!-- Project Card 1 -->
+                    <div class="bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition-transform duration-300 project-card">
+                        <img src="https://placehold.co/600x400/9ca3af/FFFFFF?text=Project+1" alt="Project 1" class="rounded-lg mb-6 w-full">
+                        <h3 class="text-2xl font-bold mb-2">Mobile Banking App</h3>
+                        <p class="text-gray-600 mb-6">
+                            Redesigned a mobile banking app to improve user experience and streamline transactions.
+                        </p>
+                        <a href="#" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full inline-block hover:bg-blue-700 transition-colors project-button">
+                            View Case Study
+                        </a>
+                    </div>
+                    <!-- Project Card 2 -->
+                    <div class="bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition-transform duration-300 project-card">
+                        <img src="https://placehold.co/600x400/9ca3af/FFFFFF?text=Project+2" alt="Project 2" class="rounded-lg mb-6 w-full">
+                        <h3 class="text-2xl font-bold mb-2">E-commerce Website</h3>
+                        <p class="text-gray-600 mb-6">
+                            Developed a user journey map and redesigned the checkout flow for a new e-commerce site.
+                        </p>
+                        <a href="#" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full inline-block hover:bg-blue-700 transition-colors project-button">
+                            View Case Study
+                        </a>
+                    </div>
+                    <!-- Project Card 3 -->
+                    <div class="bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition-transform duration-300 project-card">
+                        <img src="https://placehold.co/600x400/9ca3af/FFFFFF?text=Project+3" alt="Project 3" class="rounded-lg mb-6 w-full">
+                        <h3 class="text-2xl font-bold mb-2">Health & Wellness App</h3>
+                        <p class="text-gray-600 mb-6">
+                            Designed a feature for a health app that helps users track their meditation habits.
+                        </p>
+                        <a href="#" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full inline-block hover:bg-blue-700 transition-colors project-button">
+                            View Case Study
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="container mx-auto px-6 py-20 md:py-32">
+            <div class="text-center mb-12">
+                <h2 class="text-4xl md:text-5xl font-bold mb-4">Get in Touch</h2>
+                <p class="text-lg text-gray-600">I'm always open to new opportunities and collaborations.</p>
+            </div>
+            <div class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-lg">
+                <form action="#" method="POST" class="space-y-6">
+                    <div>
+                        <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+                        <input type="text" id="name" name="name" class="rounded-md" placeholder="Your Name">
+                    </div>
+                    <div>
+                        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                        <input type="email" id="email" name="email" class="rounded-md" placeholder="your.email@example.com">
+                    </div>
+                    <div>
+                        <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+                        <textarea id="message" name="message" rows="4" class="rounded-md" placeholder="Your message..."></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full hover:bg-blue-700 transition-colors duration-300 w-full md:w-auto">
+                            Send Message
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white text-center py-8">
+        <p class="text-sm">&copy; 2025 Jane Doe. All rights reserved.</p>
+    </footer>
+
+    <!-- JavaScript for mobile menu toggle -->
+    <script>
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // Hide mobile menu when a link is clicked
+        mobileMenu.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.add('hidden');
+            });
+        });
+    </script>
+</body>
+</html>
