--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Voller - Product Designer</title>
+    <title>Kevin Walter - UX Designer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Fonts - Archivo Black for headers -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <!-- Google Fonts - Archivo for body and labels -->
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Archivo', sans-serif;
+        }
+        h1, h2, h3 {
+            font-family: 'Archivo Black', sans-serif;
         }
         /* Custom styling for cards to ensure consistent appearance and spacing */
         .card {
@@ -40,7 +49,6 @@
                 <a href="#about" class="hover:text-blue-600 transition-colors">About</a>
                 <a href="#work" class="hover:text-blue-600 transition-colors">Work</a>
                 <a href="#reviews" class="hover:text-blue-600 transition-colors">Reviews</a>
-                <a href="#contact" class="hover:text-blue-600 transition-colors">Contact</a>
             </div>
             <!-- Mobile Menu -->
             <button id="mobile-menu-button" class="md:hidden">
@@ -53,7 +61,6 @@
             <a href="#about" class="block py-2 px-6 hover:bg-gray-100">About</a>
             <a href="#work" class="block py-2 px-6 hover:bg-gray-100">Work</a>
             <a href="#reviews" class="block py-2 px-6 hover:bg-gray-100">Reviews</a>
-            <a href="#contact" class="block py-2 px-6 hover:bg-gray-100">Contact</a>
         </div>
     </header>
 
@@ -170,17 +177,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Contact Section - Placeholder, as it was not in the mockup -->
-        <section id="contact" class="container mx-auto px-6 py-20 md:py-32 text-center">
-            <h2 class="text-3xl font-bold mb-4">Get in Touch</h2>
-            <p class="text-lg text-gray-600 max-w-xl mx-auto">
-                Feel free to connect with me to discuss new opportunities or just to say hello.
-            </p>
-            <div class="mt-8">
-                <a href="mailto:hello@example.com" class="text-blue-600 font-medium hover:underline">hello@example.com</a>
             </div>
         </section>
     </main>
