--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Walter - UX Designer</title>
+    <title>Kevin Voller - Product Designer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Archivo Black for headers -->
@@ -44,7 +44,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-xl font-semibold">Kevin Walter</a>
+            <a href="#" class="text-xl font-semibold">Kevin Voller</a>
             <div class="hidden md:flex space-x-8 text-sm font-medium">
                 <a href="#about" class="hover:text-blue-600 transition-colors">About</a>
                 <a href="#work" class="hover:text-blue-600 transition-colors">Work</a>
@@ -123,85 +123,4 @@
                             <h3 class="text-2xl font-semibold">Rethinking in-store shopping</h3>
                         </div>
                         <p class="text-gray-600 text-sm leading-relaxed mb-4">
-                            This project explored new methods of improving the in-store shopping experience, from browsing to checking out.
-                        </p>
-                        <a href="#" class="inline-block text-blue-600 font-medium hover:underline">View case study →</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Reviews Section -->
-        <section id="reviews" class="container mx-auto px-6 py-20 md:py-32">
-            <h2 class="text-3xl font-bold mb-12">Reviews</h2>
-            <div class="grid md:grid-cols-3 gap-8">
-                <!-- Review Card 1 -->
-                <div class="card p-6">
-                    <p class="italic text-gray-600 mb-4">
-                        "A role model for skill and passion, bringing design to life and empowering his teammates more effectively."
-                    </p>
-                    <div class="flex items-center space-x-4">
-                        <img src="https://placehold.co/60x60/D1D5DB/1F2937?text=P1" alt="Profile photo of first reviewer" class="rounded-full w-12 h-12">
-                        <div>
-                            <p class="font-semibold">FirstName LastName</p>
-                            <p class="text-sm text-gray-500">Design Manager</p>
-                            <p class="text-xs text-gray-400">Google</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review Card 2 -->
-                <div class="card p-6">
-                    <p class="italic text-gray-600 mb-4">
-                        "A role model for skill and passion, bringing design to life and empowering his teammates more effectively."
-                    </p>
-                    <div class="flex items-center space-x-4">
-                        <img src="https://placehold.co/60x60/D1D5DB/1F2937?text=P2" alt="Profile photo of second reviewer" class="rounded-full w-12 h-12">
-                        <div>
-                            <p class="font-semibold">FirstName LastName</p>
-                            <p class="text-sm text-gray-500">Design Manager</p>
-                            <p class="text-xs text-gray-400">Google</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review Card 3 -->
-                <div class="card p-6">
-                    <p class="italic text-gray-600 mb-4">
-                        "A role model for skill and passion, bringing design to life and empowering his teammates more effectively."
-                    </p>
-                    <div class="flex items-center space-x-4">
-                        <img src="https://placehold.co/60x60/D1D5DB/1F2937?text=P3" alt="Profile photo of third reviewer" class="rounded-full w-12 h-12">
-                        <div>
-                            <p class="font-semibold">FirstName LastName</p>
-                            <p class="text-sm text-gray-500">Design Manager</p>
-                            <p class="text-xs text-gray-400">Google</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-white text-gray-600 text-sm py-8 text-center">
-        <p>Kevin Walter</p>
-        <p class="mt-2">Copyright © 2024 Kevin Walter. All rights reserved.</p>
-    </footer>
-
-    <!-- JavaScript for mobile menu toggle -->
-    <script>
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-        
-        // Close mobile menu on link click
-        mobileMenu.querySelectorAll('a').forEach(link => {
-            link.addEventListener('click', () => {
-                mobileMenu.classList.add('hidden');
-            });
-        });
-    </script>
-</body>
-</html>
+                            This project explored new methods of improving the in-store shopping experience, from brows
