--- a/index.html
+++ b/index.html
@@ -202,10 +202,9 @@
                     </div>
                     </div>
                 </a>
-                                <!-- Project Card 2 (formerly 1st) -->
+                                <!-- Project Card 2 -->
                 <a href="https://docs.google.com/presentation/d/1yYuF8uYjaVfiS_-Orqzt2iCcqBAJd-xyqCc3BYRNbiY/edit?slide=id.g6adec8c589_0_816#slide=id.g6adec8c589_0_816" target="_blank" rel="noopener noreferrer" class="block">
                     <div class="card md:flex h-auto border border-[#202124] rounded-2xl transition-all duration-300 hover:border-4 hover:border-[#202124] hover:shadow-[8px_8px_0_4px_#202124] box-border cursor-pointer relative group">
-                        <div class="absolute top-4 right-4 bg-red-600 text-white px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wide z-10">Work in Progress</div>
                         <img src="gps_thumbnail.gif" alt="GPS thumbnail" class="w-full md:w-[554px] h-64 md:h-auto object-cover">
                     <div class="p-8 md:p-12 md:w-full">
                         <div class="flex items-center space-x-2 mb-3">
