--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
                 </a>
                 <!-- Project Card 3 (formerly 2nd) -->
-                <a href="#" class="block">
+                <a href="javascript:;" onclick="alert('This project is WIP. Contact me to learn more at krvoller@gmail.com')" class="block">
                     <div class="card md:flex h-auto border border-[#202124] rounded-2xl transition-all duration-300 hover:border-4 hover:border-[#202124] hover:shadow-[8px_8px_0_4px_#202124] box-border cursor-pointer relative group">
                         <div class="absolute top-4 right-4 bg-red-600 text-white px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wide z-10">Work in Progress</div>
                         <img src="buy_now_thumbnail.jpg" alt="Buy Now thumbnail" class="w-full md:w-[554px] h-64 md:h-auto object-cover">
